testsuite/single/tests/compiler/fail/bad_at_block.lpc
void foo() {
  string text = @BLOCK
@BLOCK;
}
